--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -1,3 +1,3 @@
 @import "./variables/all.scss";
-@import "./helpers/mixins.scss";
-@import "./helpers/devices.scss";
+@import "./helpers/all.scss";
+@import "./typhograpy/all.scss";
