--- a/src/scss/helpers/devices.scss
+++ b/src/scss/helpers/devices.scss
@@ -1,8 +1,8 @@
 $phone: 0px;
 $tablet: 768px;
-$laptop: 1024;
-$desktop: 1440;
-$large: 1920;
+$laptop: 1024px;
+$desktop: 1440px;
+$large: 1920px;
 
 @mixin xs {
   @media only screen and ( 
@@ -43,5 +43,31 @@ $large: 1920;
 @mixin xl {
   @media only screen and (min-width: $large) {
     @content;
+  }
+}
+
+@include xs() {
+  * {
+    background-color: red;
+  }
+}
+@include sm() {
+  * {
+    background-color: rgb(200, 255, 0);
+  }
+}
+@include md() {
+  * {
+    background-color: rgb(0, 255, 98);
+  }
+}
+@include lg() {
+  * {
+    background-color: rgb(0, 38, 255);
+  }
+}
+@include xl() {
+  * {
+    background-color: rgb(255, 0, 255);
   }
 }
